@@ -75,6 +75,7 @@ Improvements:
 
 - BugUtil
 	getText() and getPlainText() both replace [ICON_XXX] in the message
+	Added alertInput() and alertInputFlags() that print to the screen using alert() instead of debug()
 
 Bug Fixes:
 
